# pyike

./: pyproject.toml
docs/: .gitignore  ike.yaml
docs/markdoc/tags/: index.ts
docs/public/.cache/: ray.data.read_api.from_arrow.json  ray.data.read_api.from_huggingface.json  ray.data.read_api.from_items.json  ray.data.read_api.from_modin.json  ray.data.read_api.from_numpy_refs.json  ray.data.read_api.read_numpy.json  ray.data.read_api.read_text.json  ray.data.read_api.read_webdataset.json
extractor/: extract.py
extractor/models/: arg.py  example.py
markdoc-starter/pages/: index.md
markdoc-starter/pages/docs/: index.md
markdoc-starter/public/.cache/: ray.air.util.tensor_extensions.pandas.column_needs_tensor_extension.json  ray.data.read_api.from_torch.json  ray.data.read_api.read_avro.json
src/ike/: __init__.py  bootstrap.py  extract.py  link.py  main.py  node.py  parser.py
src/ike/models/: __init__.py  cls.py  func.py
starter/: .gitignore  getting-started.md  ike.yaml  spam.md
starter/.ike/: next.config.ts  package.json  types.ts
starter/.ike/components/: Callout.tsx  CodeBlock.tsx  File.tsx  FuncReference.tsx  FunctionReference.tsx  Heading.tsx  SideNav.tsx  TableOfContents.tsx  TopNav.tsx  index.js
starter/.ike/pages/: _app.tsx  spam.md
starter/.ike/public/: data.json  globals.css  ike.yaml
starter/.internals/public/: ray.data.range.json  spam.txt
starter/.next/: trace
starter/.next/server/: _error.js
starter/public/.cache/: ray.data._internal.block_batching.block_batching.batch_blocks.json  (+7 more)
tests/: test_extract.py
(+53 files in other folders)
