[tool.poetry]
name = "ike"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "ike", from = "src" }]

[tool.poetry.scripts]
ike = "ike.main:main"

[tool.poetry.dependencies]
python = "^3.12"
typer = "^0.13.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.8.0"
pytest = "^8.3.3"
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
